--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "aiohttpmiddleware"
+name = "scrapy_aiohttp"
 version = "0.1.0"
 description = "Simple integrations aiohttp in Scrapy."
 license = "BSD-3-Clause"
@@ -7,7 +7,7 @@ authors = ["Artem Serdechnyi <serdechnyi.art@gmail.com"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.10"
 scrapy = "^2.11.0"
 aiohttp = "^3.8.6"
 coverage = "^7.3.2"
