--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,11 @@ scrapy = "^2.11.0"
 aiohttp = "^3.8.6"
 coverage = "^7.3.2"
 
+[tool.coverage.run]
+source = ["scrapy_aiohttp"]
+
+[tool.coverage.json]
+pretty_print = true
 
 [build-system]
 requires = ["poetry-core"]
