--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 python = "^3.10"
 scrapy = "^2.11.0"
 aiohttp = "^3.8.6"
-coverage = "^7.3.2"
+coverage = { version = "^7.3.2", extras = ["toml"] }
 
 [tool.coverage.run]
 source = ["scrapy_aiohttp"]
