--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,23 @@
 [tool.poetry]
 name = "scrapy_aiohttp"
 version = "0.1.0"
-description = "Simple integrations aiohttp in Scrapy."
+description = "Scrapy middleware for sending requests with aiohttp."
 license = "BSD-3-Clause"
 authors = ["Artem Serdechnyi <serdechnyi.art@gmail.com>"]
 readme = "README.md"
+classifiers = [
+    "Development Status :: 2 - Alpha",
+    "License :: OSI Approved :: BSD License",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Framework :: Scrapy",
+    "Intended Audience :: Developers",
+    "Topic :: Internet :: WWW/HTTP",
+    "Topic :: Software Development :: Libraries :: Application Frameworks",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+]
 
 [tool.poetry.dependencies]
 python = "^3.10"
