--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -20,7 +20,7 @@ jobs:
         pip install --upgrade pip
         pip install poetry
 
-    - name: Build and publish
+    - name: Build
       run: |
         poetry build
       env:
