--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -13,7 +13,7 @@ jobs:
     - name: Set up Python 3.10.12
       uses: actions/setup-python@v4
       with:
-        python-version: "3.10.12"
+        python-version: 3.10.12
 
     - name: Install dependencies
       run: |
