--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -7,13 +7,13 @@ jobs:
   publish:
     runs-on: ubuntu-latest
 
-    steps:
+    steps
     - uses: actions/checkout@v4
 
-    - name: Set up Python
+    - name: Set up Python 3.10.12
       uses: actions/setup-python@v4
       with:
-        python-version: "3.x"
+        python-version: 3.10.12
 
     - name: Install dependencies
       run: |
