--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -7,7 +7,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
 
-    steps
+    steps:
     - uses: actions/checkout@v4
 
     - name: Set up Python 3.10.12
